# P6

./: FrankTempSegmentation.cpp
Calibration/: Calibration_stats.m  calibration.txt  pointpick.cpp  ur3Calibration.py
DD/: Read me
Different_segmentations/: Difference_of_Normals_segmentation.cpp  Segment.txt
Final/: Debug.cpp  Frankenstein.cpp  ROS_Temp.cpp  Ros_Scan.cpp  UR3_alive.py  UR_moveit.py  finalP6.cpp  final_touches.cpp  movePose.py  newmessagetype.cpp  temp_publisher.py
PCL/: FirstAttempt  SecondAttempt.cpp
PCL_sandbox/: 18cm>_>.cpp  2dwithline.cpp  CMakeLists.txt  FirstAttempt.cpp  NARFfeatures.cpp  NEWESTPASS.cpp  NormalAccess.cpp  NormalsAccess2.cpp  PublisherForTesting.cpp  SecondAttempt.cpp  box.cpp  cylinder_segmentation.cpp  filterpass  hull.cpp  intersectionFunction.cpp  min_cut_segmentation.cpp  package.xml  passingthroughsegmentation.cpp  pointPicking.cpp  publishCoop  region_growing_segmentation.cpp  simplefind.cpp  simplepublish.cpp  somethingswesetup.cpp  transformationFunction.py  viewPointCloudPoints
PointCloudFiles/: Intro.txt  hullline.pcd  leg1.pcd  leg2.pcd  leg3.pcd  leg4.pcd  legfromline.pcd
VisualStudio project files/: BrokenPancake.pcd  ConsoleApplication21 - OG.cpp  ConsoleApplication21.cpp  LooksLikeThisWorks.cpp  PointCloudProcessing.cpp  almostworkingoutline.cpp  biggestnormal.cpp  concaveboi.pcd  findjoint.cpp  findline.cpp  goodiethesecond.pcd  leg_filtered.pcd  modeledToolPlacement.cpp  output.pcd
ply_read/ply_read/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ply_read  ply_read.cpp
(+32 files in other folders)
